<resources>
    <string name="app_name" translatable="false">Rashr</string>
    <string name="settings">Settings</string>
    <string name="sCWM">CWM Recovery</string>
    <string name="sFlashRecovery">Flash Recovery</string>
    <string name="sFlashKernel">Flash Kernel</string>
    <string name="recovery_history">Recovery History</string>
    <string name="kernel_history">Kernel History</string>
    <string name="sTWRP">TWRP Recovery</string>
    <string name="sPhilz">Philz Recovery</string>
    <string name="other_recovery">Recovery from Storage</string>
    <string name="other_kernel">Kernel from Storage</string>
    <string name="sRecoveryBackup">Backup Recovery</string>
    <string name="sKernelBackup">Backup Kernel</string>
    <string name="backups">Backups</string>
    <string name="backup">Backup</string>
    <string name="go">Go</string>
    <string name="sRebooter">Rebooter</string>
    <string name="restore">Restore</string>
    <string name="rename">Rename</string>
    <string name="sClearCache">Clear downloads</string>
    <string name="report">Report bug</string>
    <string name="sExit">Exit</string>
    <string name="xda">XDA-Thread</string>
    <string name="set_name">Name of Backup</string>
    <string name="bak_warning">Before you do some actions with Rashr please create an backup and store it on your PC.
        \nBackups will be created under\n%s.
        \nThe DEV is not responsible on the damages of your device.</string>
    <string name="flash_options">Flash Options</string>
    <string name="risk">I know the risk</string>
    <string name="sReboot">Reboot</string>
    <string name="sRebootHot">Hot Reboot</string>
    <string name="sRebootRecovery">Reboot Recovery</string>
    <string name="sRebootBootloader">Reboot Bootloader</string>
    <string name="sRebootShutdown">Shutdown</string>
    <string name="info">Information</string>
    <string name="flashed">Partition flashed.</string>
    <string name="warning">Warning!</string>
    <string name="fota">Flashing Recovery System on this devices will change the FOTAKernel (replacement partition)
        this will only work if your kernel support it (The most Custom Kernel and ROM does it).</string>
    <string name="flash_over_recovery">Flash Recovery now? (needs to Reboot into Recovery)</string>
    <string name="bak_done">Backup completed</string>
    <string name="backupalready">Backup already exists.</string>
    <string name="error">Error</string>
    <string name="not_supportded">Your Device is not supported yet. Scan System and Report unsupported Device or
        try to find partition (reboot once into recovery)?</string>
    <string name="no_root">Device not Rooted. Please Root it. More information under
        \n\nxda-developers.com</string>
    <string name="Downloading">Downloading…</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Comment here, what is not working correctly (download, flash, common support or other)</string>
    <string name="positive">Yes</string>
    <string name="neutral">No</string>
    <string name="negative">Cancel</string>
    <string name="log">Log Shell-Commands</string>
    <string name="showlog">Show Logs</string>
    <string name="delete">Delete</string>
    <string name="sBackupMgr">Backup Manager</string>
    <string name="setname">Set name of Backup</string>
    <string name="reboot_recovery_now">Reboot in to recovery now?</string>
    <string name="reboot_now">Reboot now?</string>
    <string name="flashing">Flashing…</string>
    <string name="restoring">Restoring…</string>
    <string name="creating_bak">Creating Backup…</string>
    <string name="download_utils">To use this App you need to download small tools (around 512KB). This requires a internet connection.
        \nDownload now?</string>
    <string name="over_recovery">Device will be flashed over recovery</string>
    <string name="ShowAds">Show Ads to support</string>
    <string name="please_restart">Please restart the app to apply changes</string>
    <string name="please_ads">Please turn the Ads on to support my work! :(</string>
    <string name="donate_to_support">Donate over the menu to support my work! :)</string>
    <string-array name="donation_google_catalog_values">
        <item>1 Euro</item>
        <item>2 Euros</item>
        <item>3 Euros</item>
        <item>5 Euros</item>
    </string-array>
    <string name="donate">Donate</string>
    <string name="never_again">Never show again</string>
    <string name="try_again">Try again!</string>
    <string name="later">Later</string>
    <string name="update_done">Update done</string>
    <string name="pick_file">Pick File</string>
    <string name="flash_error">Failed to flash</string>
    <string name="res_error">Failed to restore</string>
    <string name="bak_error">Failed to backup</string>
    <string name="stock">Stock</string>
    <string name="changelog">Changelog</string>
    <string name="use_supersu">SuperSu from Chainfire not recognized on your device. Please use it to avoid errors.
        Download SuperSu (from Play Store) now?</string>
    <string name="bak_deleted">Backup deleted</string>
    <string name="extract_failed">Extract needed files from App failed. Please restart the App.</string>
    <string name="no_history">No history found</string>
    <string-array name="styles">
        <item>Styles</item>
        <item>Holo Light Dark Bar Style</item>
        <item>Holo Light Style</item>
        <item>Holo Dark Style</item>
    </string-array>
    <string name="flash_as" formatted="false">Flash %s as</string>
    <string name="recovery">Recovery</string>
    <string name="kernel">Kernel</string>
    <string name="getting_root">Trying to get Root-Access</string>
    <string name="reading_device">Reading Device Infos</string>
    <string name="loading_ui">Loading UI</string>
    <string name="loading_data">Extracting data and creating needed Folder</string>
    <string name="recovery_script_manager">Recovery-Script Manager</string>
    <string name="bak_name">Custom Backup Name</string>
    <string name="flash_queue">Flash Queue</string>
    <string name="wipe_opts">Wipe Options</string>
    <string name="add_queue">Add Zip to queue</string>
    <string name="backup_opts">Backup Options</string>
    <string name="system">System</string>
    <string name="data">Data</string>
    <string name="cache">Cache</string>
    <string name="dalvik">Dalvik</string>
    <string name="boot">Boot</string>
    <string name="recovery_script_mind">Please keep in mind, this will only work with TWRP compatible recovery</string>
    <string name="run">Run</string>
    <string name="recovery_script_review">Script Preview</string>
    <string name="failed_unpack_files">Failed to unpack files from App</string>
    <string name="failed_setup_layout">Error setting up Layout</string>
    <string name="refresh_list">Update started!</string>
    <string name="new_imgs_loaded">%s new IMGs loaded</string>
    <string name="make_choice">Please make your choice</string>
    <string name="unified_info">This ROM ist using Unified CyanogenMod Sources.\n
        Consequently it could be that Rashr isn\'t able to find Recovery or Kernel images.\n
        In this case you can choose your real device. (do this if there aren\'t any images found)\n
        BE CAREFUL WITH THIS OPTION!</string>
    <string name="reloading">Reloading</string>
    <string name="keep_current_name">Keep current name (%s)</string>
    <string name="rename_failed">Rename failed</string>
    <string name="flash">Flash</string>
    <string name="recovery_description">With this function you are able to flash your devices build-in recovery partition with one
        click!</string>
    <string name="kernel_description">With this function you are able to flash your devices build-in kernel/boot partition with
        one click!</string>
    <string name="options">Options</string>
    <string name="clear_cache_description">Delete all downloaded recovery/kernel images</string>
    <string name="reboot_description">Let your device reboot instantly</string>
    <string name="reboot_recovery_description">Let your device reboot into recovery instantly</string>
    <string name="reboot_bootloader_description">Let your device reboot into bootloader/download mode instantly</string>
    <string name="shutdown_description">Let your device shutdown instantly</string>
    <string name="cwm_description">ClockworkMod Recovery is the most known Custom Recovery for Android</string>
    <string name="twrp_description">Team Winn Recovery Project (TWRP) is a full touch controllable Custom Recovery</string>
    <string name="philz_description">PhilZ Touch Recovery is a improved advanced version of ClockworkMod</string>
    <string name="stock_recovery_description">Stock recoveries are the standard recovery, here you can return to your stock recovery.</string>
    <string name="stock_kernel_description">Stock kernel are the standard kernel, here you can return to your stock kernel.</string>
    <string name="delete_confirmation">Did you really want to delete all downloaded images?</string>
    <string name="other_storage_description">This option allows you to flash already downloaded images stored on your device.</string>
    <string name="reboot_confirmation">Reboot now?</string>
    <string name="shutdown_confirmation">Shutdown now?</string>
    <string name="history_description">Here you can find the last 5 flashed images</string>
    <string name="reset_app">Reset App</string>
    <string name="reset_app_description">Reset app settings with the standard</string>
    <string name="files_deleted">Files deleted</string>
    <string name="onlyLanguage">Please only write in Spanish, German or English</string>
    <string name="flasher">Flasher</string>
    <string name="history">History</string>
    <string name="exit_app">Exit App?</string>
    <string name="skip_md5">Skip MD5</string>
    <string name="UseDarkUI">Use dark UI</string>
    <string name="check_app_updates">Check updates on start</string>
    <string name="failed_update">Check for updates failed</string>
    <string name="update_available">Upadate available</string>
    <string name="download_update">Please download the update to keep secure and get the latest features</string>
    <string name="open_playstore">Open Play Store</string>
    <string name="uptodate">Up to date :D</string>
    <string name="update">Update</string>
    <string name="lists_outdated">The list with available recoveries and kernels are outdated. To flash your device with the latest recoveries and kernels update.\nNot all devices are supported!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stock_recovery">Stock Recovery</string>
    <string name="stock_kernel">Stock Kernel</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="hide_uptodate_hint">Hide up to date hints</string>
    <string name="xzdualrecovery">XZDualRecovery</string>
    <string name="xzdual_describtion">XZDualRecovery is created by XDA-Member [NUT] and contains TWRP CWM and PhilZ so you can choose which one you want to use</string>
    <string name="skip_size_check">Skip size cheking on Images (can cause damage)</string>
    <string name="skip_validate_image">Skip Image header checking (can cause damage)</string>
    <string name="information">Information</string>
    <string name="licenses">Licenses</string>
    <string name="cm_recovery">CyanogenMod Recovery</string>
    <string name="cm_recovery_description">CyanogenMod Recovery is used by CyanogenMod in their ROMs and are kept really near to stock recovery.</string>
    <string name="google_plus" translatable="false">Google+</string>
    <string name="github" translatable="false">GitHub</string>
</resources>