<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_drawer"
    android:layout_width="@dimen/navigation_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#111" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button style="@style/nowCardDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_script_manager"
            android:onClick="bOpenRecoveryScriptManager"
            android:minHeight="74dp"
            android:id="@+id/bOpenRecoveryScriptManager" />

        <Button style="@style/nowCardDark"
            android:id="@+id/bXDA"
            android:layout_width="match_parent"
            android:minHeight="74dp"
            android:layout_height="wrap_content"
            android:onClick="bXDA"
            android:text="@string/xda" />

        <Button style="@style/nowCardDark"
            android:id="@+id/bReport"
            android:layout_width="match_parent"
            android:minHeight="74dp"
            android:layout_height="wrap_content"
            android:onClick="bReport"
            android:text="@string/report" />

        <Spinner style="@style/spinnerStyleView"
            android:id="@+id/spStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/styles" />

        <CheckBox
            android:id="@+id/cbShowAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cbShowAds"
            android:text="@string/ShowAds"
            android:textColor="@android:color/white"/>

        <CheckBox
            android:id="@+id/cbLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cbLog"
            android:text="@string/log"
            android:textColor="@android:color/white" />

        <Button style="@style/nowCardDark"
            android:id="@+id/bShowLogs"
            android:layout_width="match_parent"
            android:minHeight="74dp"
            android:layout_height="wrap_content"
            android:onClick="bShowLogs"
            android:text="@string/showlog"  />

        <Button style="@style/nowCardDark"
            android:id="@+id/bDonate"
            android:layout_width="match_parent"
            android:minHeight="74dp"
            android:layout_height="wrap_content"
            android:onClick="bDonate"
            android:text="@string/donate" />

        <Button style="@style/nowCardDark"
            android:id="@+id/bExit"
            android:layout_width="match_parent"
            android:minHeight="74dp"
            android:layout_height="wrap_content"
            android:onClick="bExit"
            android:text="@string/sExit" />

    </LinearLayout>

</ScrollView>