<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/comment_hint"
        android:maxHeight="250dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/go" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:text="@string/onlyLanguage"
        android:layout_gravity="center_horizontal" />
</android.support.v7.widget.LinearLayoutCompat>