<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".FlashAsFragment">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvFlashAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bFlashAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/go"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/bCancel" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/negative"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvFlashAs" />

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/optAsKernel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:tag="kernel"
            android:text="@string/kernel"
            android:textSize="24sp"
            android:layout_margin="10dp" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/optAsRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:tag="recovery"
            android:text="@string/recovery"
            android:textSize="24sp"
            android:layout_margin="10dp" />
    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>
